--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>CAUA 321</h1>
+<h1>CAUA </h1>
+                                                            Curriculo
+Nome: Caua Victor de Castilho Cavaca 
+---------------------------------------------------------------
+idade: 15 Anos
+---------------------------------------------------------------
+email: cauacastilho90@gmail.com 
+---------------------------------------------------------------
